
- Removed the charts from the backtesting dialog. This was bloat and fluff we don't need. Everything that is 
  important is in the summary.
  
- Added a global font preference for the app.

- Changed the dialogs to edit values in place instead of popping up a dialog.

- Made some minor GUI changes to the toolbar. Replaced chart type and chart compression buttons with combo boxes.


0.17
====

- Bug fix for yahoo quotes that didn't update new symbols first time.

- Added basic indicator documentation.

- Added new quote plugin CC. This creates a continuous adjusted futures chart for each futures symbol available.

- Added status messages to all the quote plugins for monitoring download progress.

- Added an indicator plugin tutorial in the docs.

0.16
======

- added an icon for qtstalker (qtstalker.xpm)

- added font preference for charts

- Fixed bug that didn't update filelist after deleting a chart

- COT changed filenames for the annual file, updated COT quote plugin to handle old and new names.

- Fixed bug that skipped previous date when calculating MA's.

- Added a compile option to increase speed and decrease size "-Os".

- Fixed "export" all bug that seg faults when trying to export all charts.

- Added new MA support for Wilder's MA method  and fixed TR function to include first bar. Thanks to Glen for the patch.

- New quote plugin "Ratio". This is a composite that divides two symbols to produce the ratio between them.

- New quote plugin "CSV". This imports comma-separated values (CSV) ascii
  files from the local filesystem.

- Fixed bug that prevented chart objects with a date parm to draw.

- Oh yeah baby, now we are getting serious, the basic backtesting module now completed. First person that finds the best
  indicator rules to short MSFT and UIS stock to oblivion gets drinks on me. Let the games begin.
  
- Added new dialog to edit chart tick data in place.

0.15
======
